<resources>
    <integer name="com_vk_sdk_AppId">5680284</integer>

    <string name="app_name">Free Shop Admin</string>
    <string name="app_description">Административное приложение</string>

    <string name="login">Войти</string>
    <string name="login_error">Ошибка авторизации</string>

    <string name="logout">Выйти</string>

    <string name="yes">Да</string>
    <string name="no">Нет</string>

    <string name="accept">Принять</string>
    <string name="prepare">На публикацию</string>
    <string name="reject">Отклонить</string>
    <string name="check">Проверить</string>
    <string name="save_and_check">Сохранить и проверить</string>
    <string name="publish">Опубликовать</string>

    <string name="deferred_post">Отложенная публикация для VK</string>

    <string name="is_reject">Вы действительно хотите отклонить это объявление?</string>
    <string name="is_approve">Вы действительно хотите опубликовать это объявление?</string>
    <string name="reject_message">Комментарий к отклонению:</string>

    <string name="choose_publish_place">Выберите место для публикации</string>

    <!-- checkboxes -->

    <string name="vk">Вконтакте</string>
    <string name="site">Сайт</string>
    <string name="telegramm">Телеграмм</string>
    <string name="you_can_publish">Можно публиковать</string>

    <!-- Offers count -->

    <string name="offers_count">ОБЪЯВЛЕНИЙ</string>

    <!-- to reject chat message -->

    <string name="message_to_chat_error">Идентификатор чата отклоненных не определен.\nСообщение не отправлено.</string>
    <string name="message_to_chat_success">Сообщение в чат отклоненных успешно отправлено.</string>

    <!-- author name and messages -->

    <string name="author_not_identify">Автор не определён</string>

    <string name="message_to_user_success">Сообщение успешно отправлено.</string>

    <string name="message_text">Текст сообщения</string>

    <string name="send">Отправить</string>
    <string name="cancel">Отмена</string>

    <!-- CATEGORIES -->
    <string name="all">Всё</string>
    <string name="without_category">Без категории</string>
    <string name="closes">Одежда</string>
    <string name="shoes">Обувь</string>
    <string name="for_children">Детское</string>
    <string name="all_for_beauty">Всё для красоты</string>
    <string name="technique">Техника</string>
    <string name="all_for_home">Всё для дома</string>
    <string name="books">Книги</string>
    <string name="auto_and_moto">Авто / Мото</string>
    <string name="others">Сборная солянка</string>
    <string name="services">Услуги</string>

    <integer name="all">-1</integer>
    <integer name="without_category">0</integer>
    <integer name="closes">1</integer>
    <integer name="shoes">2</integer>
    <integer name="for_children">3</integer>
    <integer name="all_for_beauty">4</integer>
    <integer name="technique">5</integer>
    <integer name="all_for_home">6</integer>
    <integer name="books">7</integer>
    <integer name="auto_and_moto">8</integer>
    <integer name="others">9</integer>
    <integer name="services">10</integer>

</resources>
