<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <CheckBox
        android:id="@+id/cbVk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/vk"/>

    <TextView
        android:id="@+id/tvVkMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"
        android:text="@string/you_can_publish"/>

    <CheckBox
        android:id="@+id/cbSite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/site"/>

    <TextView
        android:id="@+id/tvSiteMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"
        android:text="@string/you_can_publish"/>

    <CheckBox
        android:id="@+id/cbTelegramm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telegramm"/>

    <TextView
        android:id="@+id/tvTelegrammMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textColor="@color/colorBlack"
        android:text="@string/you_can_publish"/>

</LinearLayout>