<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_reject_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.technologies.mobile.free_exchange_admin.activities.VkRejectDialogActivity">

    <TextView
        android:id="@+id/tvIsAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/is_reject" />

    <LinearLayout
        android:id="@+id/llContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorLightGray"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvOffer"
            style="@style/PostMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="Simple post test\nsimple description"
            android:maxLines="3"
            android:ellipsize="end"/>

        <com.technologies.mobile.free_exchange_admin.views.AutomaticPhotoLayout
            android:id="@+id/aplPhotos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvMessageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/reject_message" />

        <EditText
            android:id="@+id/etRejectMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bYes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/yes"
                android:textColor="@color/colorAccent" />

            <View
                android:layout_width="1px"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorLightMediumGray" />

            <Button
                android:id="@+id/bNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/colorTransparent"
                android:text="@string/no"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
